# ScrapApex

./: .gitignore  README.md  aggregated_payouts.csv  apex_payouts.csv  generate_report.py  payout_report.html  pyproject.toml  requirements.txt  scrape_apex_payouts.py
