[tool.poetry]
name = "apex-scraper"
version = "0.1.0"
description = "A web scraper for Apex Trader Funding payouts"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.30.0"
beautifulsoup4 = "^4.11.1"
pandas = "^1.5.3"
selenium = "^4.10.0"
webdriver-manager = "^3.8.6"
cloudscraper = "^1.2.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 